@@ -30,7 +30,7 @@ This will set the NODE_TLS line for you. gunbot log will be viewable from pm2 lo
 <br />
 To be able to run the application you need Java 8 <br />
 Open a terminal or command prompt and type <br />
-java -jar GunbotProxyCommunity-x.x.x.jar  (replace x.x.x with your actual version number)<br />
+java -jar GunbotProxyCommunity-x.x.x.jar -XX:+UseConcMarkSweepGC -Xmx256m -Xms256m  (replace x.x.x with your actual version number)<br />
 On OSX or some linux versions you might need to sudo su and then run the java -jar command.<br />
 <br />
 If you did everything correctly the application will start without giving you any error messages.
